Fix bottom of letters getting cut off

--- a/main.css
+++ b/main.css
@@ -52,6 +52,7 @@ td[lang="ar"] {
 
 .input-field {
   text-indent: 45px;
+  line-height: 125%;
 }
 
 .input-field:disabled:hover {
